--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/logo.png" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Management system for Lentera Cendekia" />
     <link rel="apple-touch-icon" href="/logo.png" />
